# JunoWM

./: README.md  meson.build  meson.build.bak
include/: shm.h  shm.h.bak  utils.h
src/: build_testclient.sh  client  client.c  client.c.bak  compositor.c  main.c  run_test_client.sh  server  server.c  server.c.bak  shm.c  utils.c
src-bak/: client  client.c  server  server.c
